# PiPico

./: .gitignore  .gitmodules  README.md  hello-world-build-err-2.txt  hello-world-build-err.txt
Projects/HelloWorld/: CMakeLists.txt
Projects/HelloWorld/blink_and_speak/: CMakeLists.txt  blink_and_speak.c
Projects/pico-expanded-examples/: CMakeLists.txt  oled_i2.c
Projects/pico-expanded-examples/scrolling_oled/: CMakeLists.txt  scrolling_oled.c
Projects/pico-expanded-examples/scrolling_oled/board/: oled_i2c.c
Toolchain/VSCode/: README.md  cmake-tools-kits.json  settings.json
